discussion/kv_engine/136651/136651_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39745: Make hpVbs a VBReadyQueue

Step 1 of removing shards from Flusher. We need to queue hpVbs instead
of picking them up from the shard during a flush and to do this we need
to make hpVbs a VBReadyQueue.

Change-Id: I192cd164ad40a6bb6a727f398809926b77c88727

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-04-06 19:40:03.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-06 21:06:06.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29861/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/flusher.cc:30:10:
error: constructor for "Flusher" must explicitly initialize the member "hpVbs" which does not have a default constructor
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29861/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34796/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\flusher.cc(39): error C2512: "VBReadyQueue": no appropriate default constructor available ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34796/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8152/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/flusher.cc:30:10: error: constructor for "Flusher" must explicitly initialize the member "hpVbs" which does not have a default constructor [clang-diagnostic-error]
Flusher::Flusher(EPBucket* st, KVShard* k)
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/flusher.h:105:18: note: member is declared here
    VBReadyQueue hpVbs;
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/vb_ready_queue.h:36:7: note: "VBReadyQueue" declared here
class VBReadyQueue {
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8152/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/flusher.cc:30:10:
error: constructor for "Flusher" must explicitly initialize the member "hpVbs" which does not have a default constructor [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8152/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8791/ : FAILURE

Compile error at [2021-04-06T19:53:53.725Z] ../kv_engine/engines/ep/src/flusher.cc:30:10:
error: constructor for "Flusher" must explicitly initialize the member "hpVbs" which does not have a default constructor
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8791/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17640/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10090/ : FAILURE

Compile error at [2021-04-06T20:45:34.519Z] ../kv_engine/engines/ep/src/flusher.cc:30:10:
error: constructor for "Flusher" must explicitly initialize the member "hpVbs" which does not have a default constructor
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10090/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9861/ : FAILURE

Compile error at [2021-04-06T20:48:11.536Z] ../kv_engine/engines/ep/src/flusher.cc:39:14:
error: no matching function for call to ?VBReadyQueue::VBReadyQueue()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9861/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9725/ : FAILURE

Compile error at [2021-04-06T20:29:28.201Z] ../kv_engine/engines/ep/src/flusher.cc:39:14:
error: no matching function for call to ?VBReadyQueue::VBReadyQueue()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9725/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6696/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
